# picklevw

./: .pre-commit-config.yml  LICENSE.txt  README.md  SECURITY.md  app.py  picklevw.py  picklevw.sh  project.toml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_tests.txt
.devcontainer/: devcontainer.json
.github/workflows/: branch-guard.yaml  codeql.yml  python-app.yaml  python-app.yml
src/: config.py  custom_process.py  custom_thread.py  custom_widgets.py  custom_window.py  exceptions.py  factory.py  imports.py  logic.py  mediator.py  picklevw  picklevw.py  utils.py  widgets.py  widgets_factory.py  window.py
src/.streamlit/: config.toml
src/handlers/: __init__.py  builtin_handlers.py
src/handlers/numpy_handlers/: __init__.py  extractor.py  numpy_image_handlers.py  numpy_ndarray_handlers.py
src/handlers/pandas_handlers/: __init__.py  pandas_dataframe_handlers.py  pandas_series_handlers.py
tests/: test_factory.py  test_logic.py  test_mediator.py  test_picklevw.py  test_utils.py  test_widgets.py  test_widgets_factory.py  test_window.py
