[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picklevw"
version = "0.1.0"
authors = [
    { name="Jonathan Ciapetti", email="jonathan.ciapetti@normabytes.com" },
]
description = "A small pickle viewer."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jonathanciapetti/picklevw"
Issues = "https://github.com/jonathanciapetti/picklevw/issues"
